--- a/NLP_by_Deep_Learning/NLP_by_DL_2.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_2.ipynb
@@ -240,11 +240,105 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---\n",
+    "### 2.7　ゲート付き再帰ニューラルネット\n",
+    "RNNは時間方向に深いため、長期の依存関係を学習するのが難しいという問題がある。  \n",
+    "ゲートはこれを解決する手法の一つである。  \n",
+    "\n",
+    "ゲート $\\mathbf{g}^{(f)}, \\mathbf{g}^{(h)}$ を用いてショートカットを次の重み付き和へ拡張する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{h}^{(l)} = \\mathbf{g}^{(f)} \\odot f^{(l)}(\\mathbf{h}^{(l-1)}) + \\mathbf{g}^{(h)} \\odot \\mathbf{h}^{(l-1)}\n",
+    "\\end{align*}\n",
+    "\n",
+    "また、ゲート自体も学習可能な関数とする。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{g}(\\mathbf{h}) = a^{(g)}(\\mathbf{W}^{(g)} \\mathbf{h} + \\mathbf{b}^{(g)})\n",
+    "\\end{align*}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ゲート付RNNは時間方向の隠れ状態の計算にゲート付きショートカットを用いたRNNである。\n",
+    "\n",
+    "まず、１つ前の時刻の隠れ状態ベクトル $\\mathbf{h}_{t-1}$ へのショートカットを持ったRNNを考える。\n",
+    "再帰的な評価を行うと\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{h}_{t} &= f(\\mathbf{h}_{t-1}) + \\mathbf{h}_{t-1} = f(\\mathbf{h}_{t-1}) + f(\\mathbf{h}_{t-2}) + \\mathbf{h}_{t-2} = \\cdots \\\\\n",
+    "&= \\sum_{i=1}^{t} f(\\mathbf{h}_{i-1})\n",
+    "\\end{align*}\n",
+    "\n",
+    "これをゲート付きに拡張する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{h}_{t} &= f(\\mathbf{h}_{t-1}) + \\mathbf{g}_{t} \\odot \\mathbf{h}_{t-1} \\\\\n",
+    "&= f(\\mathbf{h}_{t-1}) + \\mathbf{g}_{t} \\odot f(\\mathbf{h}_{t-2}) + \\mathbf{g}_{t} \\odot \\mathbf{g}_{t-1} \\odot \\mathbf{h}_{t-2} = \\cdots \\\\\n",
+    "&= f(\\mathbf{h}_{t-1}) + \\sum_{i=1}^{t-1} ( \\odot_{j=i}^{t} \\mathbf{g}_{j}) f(\\mathbf{h}_{i-1})\n",
+    "\\end{align*}\n",
+    "\n",
+    "ゲート自体を学習することで、忘却の度合いを調節することができるほか  \n",
+    "誤差が過去に直接伝播することで勾配消失が避けられる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 長短期記憶（LSTM）\n",
+    "LSTM (long short-term memory) は最も代表的なゲート付RNNであり、  \n",
+    "入力ゲート $\\mathbf{i}$、忘却ゲート $\\mathbf{f}$、出力ゲート $\\mathbf{o}$ を使用するほか  \n",
+    "セルと呼ばれる隠れ状態ベクトル $\\mathbf{c}$ を追加する。\n",
+    "\n",
+    "LSTMの一つは次のようなモデルとなる。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\left[ \\begin{array} \\bar{\\mathbf{h}}_{t}^{(l)} \\\\ \\mathbf{i}_{t}^{(l)} \\\\ \\mathbf{f}_{t}^{(l)} \\\\ \\mathbf{o}_{t}^{(l)} \\end{array} \\right] &= \\left[ \\begin{array} \\text{tanh} \\\\ \\text{sigmoid} \\\\ \\text{sigmoid} \\\\ \\text{sigmoid} \\end{array} \\right] \\left( \n",
+    "\\left[ \\begin{array} \\mathbf{w}_{\\bar{h}}^{(l)} \\\\ \\mathbf{w}_{i}^{(l)} \\\\ \\mathbf{w}_{f}^{(l)} \\\\ \\mathbf{w}_{o}^{(l)} \\end{array} \\right]\n",
+    "\\left[ \\begin{array}\\mathbf{h}_{t}^{(l-1)} \\\\ \\mathbf{h}_{t-1}^{(l)} \\end{array} \\right]\n",
+    " + \\left[ \\begin{array} \\mathbf{b}_{\\bar{h}}^{(l)} \\\\ \\mathbf{b}_{i}^{(l)} \\\\ \\mathbf{b}_{f}^{(l)} \\\\ \\mathbf{b}_{o}^{(l)} \\end{array} \\right]\n",
+    "\\right) \\\\\n",
+    "\\mathbf{c}_{t}^{(l)} &= \\mathbf{i}_{t}^{(l)} \\odot \\bar{h}_{t}^{(l)} + \\mathbf{f}_{t}^{(l)} \\odot \\mathbf{c}_{t-1}^{(l)} \\\\\n",
+    "\\mathbf{h}_{t}^{(l)} &= \\mathbf{o}_{t}^{(l)} \\odot \\operatorname{tanh} ( \\mathbf{c}_{t}^{(l)})\n",
+    "\\end{align*}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### ゲート付き回帰ユニット（GRU）\n",
+    "GRU (gated recurrent unit) はセルを使わないゲート付RNNで、  \n",
+    "再設定ゲート $\\mathbf{r}$ と更新ゲート \\mathbf{z}$ を用いて忘却と状態の更新を操作する。  \n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\left[ \\begin{array} \\mathbf{r}_{t}^{(l)} \\\\ \\mathbf{z}_{t}^{(l)} \\end{array} \\right] &= \\operatorname{sigmoid} \\left( \n",
+    "\\left[ \\begin{array} \\mathbf{W}_{r}^{(l)} \\\\ \\mathbf{W}_{z}^{(l)} \\end{array} \\right]\n",
+    "\\left[ \\begin{array}\\mathbf{h}_{t}^{(l-1)} \\\\ \\mathbf{h}_{t-1}^{(l)} \\end{array} \\right]\n",
+    " + \\left[ \\begin{array} \\mathbf{b}_{r}^{(l)} \\\\ \\mathbf{b}_{z}^{(l)} \\end{array} \\right]\n",
+    "\\right) \\\\\n",
+    "\\tilde{\\mathbf{h}}_{t}^{(l)} &= \\operatorname{tanh} \\left( \\left[ \\begin{array} \\mathbf{h}_{t}^{(l-1)} \\\\ \\mathbf{r}_{t}^{(l)} \\odot \\mathbf{h}_{t-1}^{(l)} \\end{array} \\right] \\right) \\\\\n",
+    "\\mathbf{h}_{t}^{(l)} &= (1-\\mathbf{z}_{t}^{(l)}) \\odot \\tilde{\\mathbf{h}}_{t}^{(l)} + \\mathbf{z}_{t}^{(l)} \\odot \\mathbf{h}_{t-1}^{(l)}\n",
+    "\\end{align*}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 2.8　木構造再帰ニューラルネット\n",
+    "木構造再帰ニューラルネット（Recursive neural networks, Tree-RNN）はRNNを木構造に拡張したものである。\n"
+   ]
   }
  ],
  "metadata": {
