--- a/NLP_by_Deep_Learning/NLP_by_DL_2.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_2.ipynb
@@ -337,8 +337,36 @@
    "source": [
     "---\n",
     "### 2.8　木構造再帰ニューラルネット\n",
-    "木構造再帰ニューラルネット（Recursive neural networks, Tree-RNN）はRNNを木構造に拡張したものである。\n"
+    "木構造再帰ニューラルネット（Recursive neural networks, Tree-RNN）はRNNを木構造に拡張したものである。\n",
+    "\n",
+    "Tree-RNNでは木構造を事前に定義することが必要である。  \n",
+    "仮に二分木を使うと仮定し、隠れ状態ベクトル $\\mathbf{h}_{P}$ の左の子と右の子を $\\mathbf{h}_{L}, \\mathbf{h}_{R}$ とすると\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{h}_{P} = a \\left( \\mathbf{W} \\left[ \\begin{array} \\mathbf{h}_{L} \\\\ \\mathbf{h}_{R} \\end{array} \\right] + \\mathbf{b} \\right)\n",
+    "\\end{align*}\n",
+    "\n",
+    "として $\\mathbf{h}_{P}$ が計算される。\n",
+    "\n",
+    "この演算は木構造の葉ノードからルートノードに向かって順次計算される。  \n",
+    "また、垂直方向に層を重ねるようにすることもできる。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{h}_{P}^{(l)} = a \\left( \\mathbf{W}^{(l)} \\left[ \\begin{array} \\mathbf{h}_{L}^{(l)} \\\\ \\mathbf{h}_{R}^{(l)} \\\\ \\mathbf{h}_{P}^{(l-1)} \\end{array} \\right] + \\mathbf{b}^{(l)} \\right)\n",
+    "\\end{align*}\n",
+    "\n",
+    "Tree-RNNは要素数 $T$ の計算グラフであっても分岐により深さ $\\log_{2}(T)$ で済む。\n",
+    "\n",
+    "自然言語処理では既存の解析器を用いて構文木を予測し、これをTree-RNNへ与えるものの  \n",
+    "構文解析は自明なタスクでなく、構文木が最適かどうかも不明である。"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
