--- a/NLP_by_Deep_Learning/NLP_by_DL_2.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_2.ipynb
@@ -362,11 +362,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---\n",
+    "### 2.9　畳み込みニューラルネット\n",
+    "CNNは画像処理においてよく用いられるが、  \n",
+    "テキストデータに対しても１次元畳み込みとして適用することができる。\n",
+    "\n",
+    "$\\mathbf{z}_{t}$ を局所特徴、窓幅を $C$、床関数を $\\lfloor x \\rfloor$ と表すとき、次のようになる。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{z}_{t}^{(l)} = \\mathbf{W}^{(l)} \\left[\n",
+    "\\begin{array} \\mathbf{h}_{t-\\lfloor C/2 \\rfloor}^{(l-1)} \\\\ \\vdots \\\\ \\mathbf{h}_{t}^{(l-1)} \\\\ \\vdots \\\\ \\mathbf{h}_{t + \\lfloor C/2 \\rfloor}^{(l-1)} \\end{array}\n",
+    "\\right] + \\mathbf{b}^{(l)}\n",
+    "\\end{align*}\n",
+    "\n",
+    "CNNの文脈では、$\\mathbf{W}^{(l)}$ を幅 $C$ のカーネル、局所特徴 $\\mathbf{z}_{t}^{(l)}$ を特徴マップ、  \n",
+    "活性化関数 $a^{(l)}$ を検出器（detector）と呼ぶ。  \n",
+    "画像処理と同じくパディング、ストライド、畳み込み後のプーリングなどが用いられる。\n",
+    "\n",
+    "テキストに対するCNNの畳み込み操作は時間非依存の変換を仮定しているため  \n",
+    "この仮定が成り立つタスクに向く。  \n",
+    "また、プーリング操作により入力系列の局所的な順番の変化に対して不変である。  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "以降は次のnotebookへ続く。"
+   ]
   }
  ],
  "metadata": {
