--- a/NLP_by_Deep_Learning/NLP_by_DL_3.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_3.ipynb
@@ -56,7 +56,189 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### 3.2　言語モデル\n"
+    "### 3.2　言語モデル\n",
+    "言語モデルあるいは確率的言語モデル（probabilistic language model）は  \n",
+    "人間が扱う自然言語で書かれた文や文書が生成される確率をモデル化したものであり、  \n",
+    "自然言語らしさを推定する道具となるほか、その確率分布からサンプリングすることで文や文書を生成できる。  \n",
+    "\n",
+    "以降は言語モデルの基本処理単位を単語と呼称し、入出力は one-hotベクトルとする。\n",
+    "\n",
+    "長さ $T$ の単語列を $\\mathbf{Y}=(\\mathbf{y}_{1}, \\mathbf{y}_{2}, \\ldots, \\mathbf{y}_{T})$ とする。  \n",
+    "このとき単語列 $\\mathbf{Y}$ を生成する確率は $P(\\mathbf{Y})$である。  \n",
+    "ある単語列が文を構成していることを明示する仮想単語として文頭を表す BOS、文末を表す EOSを導入し、  \n",
+    "文を $\\mathbf{Y}^{\\prime} = (\\mathbf{y}_{0}, \\mathbf{y}_{1}, \\ldots, \\mathbf{y}_{T}, \\mathbf{y}_{T+1})$ とする。  \n",
+    "このとき一般に $P(\\mathbf{Y}) \\neq P(\\mathbf{Y}^{\\prime})$ である。\n",
+    "\n",
+    "言語モデルとして古典的にはNグラムモデルが最も多く使われた。  \n",
+    "これと区別する意味で、ニューラルネットを用いた言語モデルをニューラル言語モデルという。  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "BOS,EOSを導入した文を $\\mathbf{Y} = (\\mathbf{y}_{0}, \\mathbf{y}_{1}, \\ldots, \\mathbf{y}_{T}, \\mathbf{y}_{T+1})$ と表し、文の生成確率 $P(\\mathbf{Y})$ をモデル化する。  \n",
+    "直接モデル化は難しいため、文中の各単語の生成確率を、  \n",
+    "その単語の前に出現した単語(列)が与えられた条件下で予測するモデルの組み合わせとして定義されるのが一般的である。 \n",
+    "\n",
+    "ここで文脈（context）を、  \n",
+    "　言語モデルにおいてある単語の出現確率を計算する際に用いる周囲の単語  \n",
+    "と定義する。\n",
+    "\n",
+    "単語の位置 $t$ より前に出現した $t-a$ 単語を $\\mathbf{Y}_{[a,t-1]} = (\\mathbf{y}_{a}, \\mathbf{y}_{a+1}, \\ldots, \\mathbf{y}_{t-1})$ と書き、これを文脈として扱う。  \n",
+    "このとき文 $\\mathbf{Y}$ の出現確率 $o(\\mathbf{Y})$ を各単語が生成される条件付き確率の積で次のように表す。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P(\\mathbf{Y}) = P(\\mathbf{y}_{0}) \\prod_{t=1}^{T+1} P(\\mathbf{y}_{t}|\\mathbf{Y}_{[0,t-1]})\n",
+    "\\end{align*}\n",
+    "\n",
+    "例えば $\\mathbf{Y}=(\\mathbf{y}_{0}, \\mathbf{y}_{1}, \\mathbf{y}_{2})$ について、 $P(X|Y)=P(X,Y)/P(Y)$ より\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P(\\mathbf{Y}) &= P(\\mathbf{y}_{0})P(\\mathbf{y}_{1}|\\mathbf{y}_{0})P(\\mathbf{y}_{2}|\\mathbf{y}_{1},\\mathbf{y}_{0}) \\\\\n",
+    "&= P(\\mathbf{y}_{0},\\mathbf{y}_{1})P(\\mathbf{y}_{2}|\\mathbf{y}_{1},\\mathbf{y}_{0}) \\\\\n",
+    "&= P (\\mathbf{y}_{0},\\mathbf{y}_{1},\\mathbf{y}_{2})\n",
+    "\\end{align*}\n",
+    "\n",
+    "である。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "条件付き確率をモデル化する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P_{model}(\\mathbf{Y}) = \\prod_{t=1}^{T+1}P_{model}(\\mathbf{y}_{t}|\\mathbf{Y}_{[a,t-1]})\n",
+    "\\end{align*}\n",
+    "\n",
+    "このモデルにおいて、BOSを使用するなら $P(\\mathbf{y}_{0})=1$ であるから $P_{model}(\\mathbf{y}_{0})$ は省略する。  \n",
+    "また、次のように、$t-a$ 単語だけ（$\\mathbf{Y}_{[a,t-1]}$）を使って条件付き確率を表現できると仮定している。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P(\\mathbf{y}_{t}|\\mathbf{Y}_{[0,t-1]}) \\approx P_{model}(\\mathbf{y}_{t}|\\mathbf{Y}_{[a,t-1]})\n",
+    "\\end{align*}\n",
+    "\n",
+    "たとえば $a=t-4$ とするとき、N=5のNグラム言語モデルと同様となる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 順伝播型ニューラル言語モデル（FFNN言語モデル）\n",
+    "前 $C$ 単語だけを入力とし、FFNNを用いて $t$ 番目の単語の出現確率をモデル化する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P_{ffnnlm}(\\mathbf{Y}) = \\prod_{t=1}^{T+1}P(\\mathbf{y}_{t}|\\mathbf{Y}_{[t-C,t-1]})\n",
+    "\\end{align*}\n",
+    "\n",
+    "FFNNへの入力は前 $C$ 単語分のone-hotベクトルを連結した $\\mathbf{Y}_{[t-C,t-1]}$ となる。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{Y}_{[t-C,t-1]} &= (\\mathbf{y}_{t-C},\\mathbf{y}_{t-C+1},\\ldots,\\mathbf{y}_{t-1}) \\\\\n",
+    "&= (\\mathbf{y}_{t^{\\prime}})_{t^{\\prime}=t-C}^{t-1}\n",
+    "\\end{align*}\n",
+    "\n",
+    "例えば、３層FFNNでの処理の流れは次の通り。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\text{(embedding vector) : } \\mbox{ }& \\mathbf{e}_{k}=\\mathbf{Ey}_{k} \\, \\forall k \\in \\{t-C, \\ldots, t-1\\} \\\\\n",
+    "\\text{(concatenate) : } \\mbox{ }& \\tilde{\\mathbf{y}}_{t}=\\operatorname{concat} ( \\mathbf{e}_{t-C}, \\ldots, \\mathbf{e}_{t-1}) \\\\\n",
+    "\\text{(hidden layer) : } \\mbox{ }& \\mathbf{h}_{t}=\\operatorname{tanh}(\\mathbf{W}^{(l)}\\tilde{\\mathbf{y}}_{t} + \\mathbf{b}^{(l)}) \\\\\n",
+    "\\text{(output layer) : } \\mbox{ }& \\mathbf{o}_{t}=\\mathbf{W}^{(o)}\\mathbf{h}_{t} + \\mathbf{b}^{(o)} \\\\\n",
+    "\\text{(probability) : } \\mbox{ }& \\mathbf{p}_{t} = \\operatorname{softmax}(\\mathbf{o}_{t}) \\\\\n",
+    "\\text{(extract }P(\\mathbf{y}_{t})\\text{) : }\\mbox{ }& P(\\mathbf{y}_{t}|\\mathbf{Y}_{[t-C,t-1]}) = \\mathbf{p}_{t} \\cdot \\mathbf{y}_{t}\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 再帰ニューラル言語モデル（RNN言語モデル）\n",
+    "入力ベクトル列 $\\mathbf{X}$ は  \n",
+    "時刻 $t$ より前の単語列を one-hotベクトル表現したベクトル列 $\\mathbf{Y}_{[0,t-1]} = (\\mathbf{y}_{0}, \\mathbf{y}_{1}, \\ldots, \\mathbf{y}_{t-1})$ となる。  \n",
+    "これを $\\mathbf{Y}_{<t} = \\mathbf{Y}_{[0,t-1]}$ と略記する。\n",
+    "\n",
+    "RNN言語モデルによる文 $\\mathbf{Y}$ の生成確率 $P_{rnnlm}(\\mathbf{Y})$ は次の通り。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P_{rnnlm}(\\mathbf{Y}) = \\prod_{t=1}^{T+1} P(\\mathbf{y}_{t}|\\mathbf{Y}_{<t})\n",
+    "\\end{align*}\n",
+    "\n",
+    "１層RNNでの処理の流れは次の通り。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\text{(embedding vector) : } \\mbox{ }& \\bar{\\mathbf{y}}_{t}=\\mathbf{Ey}_{t-1} \\\\\n",
+    "\\text{(hidden layer) : } \\mbox{ }& \\mathbf{h}_{t}=\\operatorname{tanh} \\left( \\mathbf{W}^{(l)} \\left[ \\begin{array}\\bar{\\mathbf{y}}_{t} \\\\ \\mathbf{h}_{t-1} \\end{array}  \\right] + \\mathbf{b}^{(l)} \\right) \\\\\n",
+    "\\text{(output layer) : } \\mbox{ }& \\mathbf{o}_{t}=\\mathbf{W}^{(o)}\\mathbf{h}_{t} + \\mathbf{b}^{(o)} \\\\\n",
+    "\\text{(probability) : } \\mbox{ }& \\mathbf{p}_{t} = \\operatorname{softmax}(\\mathbf{o}_{t}) \\\\\n",
+    "\\text{(extract }P(\\mathbf{y}_{t})\\text{) : }\\mbox{ }& P(\\mathbf{y}_{t}|\\mathbf{Y}_{<t}) = \\mathbf{p}_{t} \\cdot \\mathbf{y}_{t}\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### パープレキシティ（perplexity; PPL）\n",
+    "評価用のデータセットを $\\mathcal{D} = \\{ \\mathbf{Y}^{(n)} \\} _{n=1}^{|\\mathcal{D}|}$、総単語数を $N$、  \n",
+    "$n$ 番目の系列の長さを $T^{(n)}$ とする。  \n",
+    "このときパープレキシティを次式で計算する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "&b^{z} &| \\, z=-\\frac{1}{N} \\sum_{n=1}^{|\\mathcal{D}|} \\sum_{t=1}^{T^{(n)}+1} \\log_{b} P_{model} ( \\mathbf{y}_{t}^{(n)}, \\mathbf{Y}_{[a,t-1]}^{(n)})\n",
+    "\\end{align*}\n",
+    "\n",
+    "対数の底 $b$ としては $2$ や $e$ が使われる。  \n",
+    "$P_{model} ( \\mathbf{y}_{t}^{(n)}, \\mathbf{Y}_{[a,t-1]}^{(n)})$ の値域は $[0,1]$ であるから、その対数の値域は $[-\\infty, 0]$、よって $z$ は非負の値となる。\n",
+    "\n",
+    "パープレキシティは次の単語を予測する確率分布のばらつきを評価しているとみなすことができる。  \n",
+    "（モデルに従って正解を選ぶための困難さを示す）  \n",
+    "よい言語モデルの確率分布はデータと一致する次の単語にだけ高い確率を与え、ばらつきの小さい分布となる。\n",
+    "\n",
+    "また、パープレキシティの計算はモデル化の単位によらず計算可能であるので、  \n",
+    "例えば文字単位の言語モデルを単語数に対する平均パープレキシティで評価することができる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 言語モデルからの文生成\n",
+    "記号 $\\sim$ を確率モデルからサンプリングする処理を示すものとするとき、  \n",
+    "言語モデル $P_{model}(\\mathbf{y}_{t}|\\mathbf{Y}_{[a,t-1]})$ からサンプリングされた $\\hat{\\mathbf{Y}}=(\\mathbf{y}_{0}=BOS, \\hat{\\mathbf{y}}_{1}, \\ldots, \\hat{\\mathbf{y}}_{\\hat{T}}, \\hat{\\mathbf{y}}_{\\hat{T+1}})$ を次のように定義する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\hat{\\mathbf{y}}_{t} \\sim P_{model}(\\mathbf{y}_{t}, \\hat{\\mathbf{Y}}_{[a,t-1]})\n",
+    "\\end{align*}\n",
+    "\n",
+    "これは文頭から順に次の単語を予測する処理ととらえることができ、  \n",
+    "文の終わりを示すEOSが予測されたところでサンプリングを終了する。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 言語モデルの単位\n",
+    "単位としては単語のほか、文字、バイト対符号化なども用いられる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 3.3　分散表現"
    ]
   }
  ],
