--- a/NLP_by_Deep_Learning/NLP_by_DL_3.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_3.ipynb
@@ -238,7 +238,55 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### 3.3　分散表現"
+    "### 3.3　分散表現 (distributed representation)\n",
+    "単語など自然言語処理で扱う記号は人間が恣意的に定義したものであり、  \n",
+    "記号そのものの情報から記号間の類似度や関連性を直接計算することが難しい。\n",
+    "\n",
+    "**離散オブジェクト**を次のように定義する。  \n",
+    "　人や物の名前、概念のように、物理的に計測できる量を伴わず、  \n",
+    "　通常、記号を用いて離散的に表現するもの。\n",
+    "\n",
+    "**分散表現**はNLPの文脈では、一般的に次の意味で用いられる。  \n",
+    "　任意の離散オブジェクトの集合 $\\mathcal{V}$ に対して、各離散オブジェクト $v \\in \\mathcal{V}$ に  \n",
+    "　それぞれ $D$ 次元ベクトルを割り当て、離散オブジェクトを $D$ 次元ベクトルで表現したもの。\n",
+    " \n",
+    "分散表現への変換処理は、離散オブジェクトをベクトル空間内に埋め込む操作と捉えることもできる。   \n",
+    "ベクトル空間では距離や演算が定義できることから、    \n",
+    "これを離散オブジェクト間の類似度や関連性を計算する道具として用いることができる。\n",
+    "\n",
+    "単語に着目した分散表現を単語分散表現、あるいは単語埋め込みと呼ぶこともある。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 歴史的背景\n",
+    "・認知心理学や神経科学の分野では、脳のモデル化の方法論として分散表現が考えられた。  \n",
+    "　分散表現の対義語として局所表現（one-hotベクトルなどが該当）が用いられる。\n",
+    " \n",
+    "・自然言語処理研究では、単語の持つ意味（semantics）を扱う方法の１つとして分布仮説が提案された。  \n",
+    "　この仮説は、単語の意味は出現した際の周囲の単語によって決まるという考え方である。  \n",
+    "　その手法としては主成分分析や潜在ディレクレ配分などがあり、  \n",
+    "　分布仮説に基づいた方法論で得られた単語のベクトル表現を分散表現（distributional representation）と呼ぶ。\n",
+    " \n",
+    "・ニューラル言語モデルでは両分野の概念が同時に利用されている。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 分散表現の獲得方法\n",
+    "１．ニューラル言語モデルを学習することで、変換行列が分散表現に相当する値へ更新される\n",
+    "\n",
+    "２．対数線形性モデル（log-bilinear model; LBL model）を用いる  \n",
+    "　word2vecおよび対数線形性モデルと呼ばれるほぼ同じモデルが同時期に提案された。  \n",
+    "　（word2vecというツールにはskip-gramモデルおよびCBoWモデルが実装されている）\n",
+    " \n",
+    " "
    ]
   }
  ],
