--- a/NLP_by_Deep_Learning/NLP_by_DL_3.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_3.ipynb
@@ -288,6 +288,49 @@
     " \n",
     " "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### skip-gram および CBoWについて\n",
+    "語彙を $\\mathcal{V}$、$i$ 番目の単語番号の入力単語 $\\mathbf{x}_{i}$ に割り当てる単語埋め込みベクトルを $\\mathbf{e}_{i}$、  \n",
+    "$j$ 番目の単語番号の出力単語 $\\mathbf{y}_{j}$ に割り当てる単語埋め込みベクトルを $\\mathbf{o}_{j}$ で表す。  \n",
+    "ここで $1 \\leq i \\leq |\\mathcal{V}|$、$1 \\leq j \\leq |\\mathcal{V}|$ である。\n",
+    "\n",
+    "$\\mathbf{e}_{i}$ と $\\mathbf{o}_{j}$ を $1$ から $|\\mathcal{V}|$ まで並べて行列表示とみなすと、 $\\mathbf{E} = (\\mathbf{e}_{i})_{i=1}^{|\\mathcal{V}|}$、$\\mathbf{O} = (\\mathbf{o}_{j})_{j=1}^{|\\mathcal{V}|}$ と書ける。  \n",
+    "ここで $\\mathbf{e}_{i}$ と $\\mathbf{o}_{j}$ は $D$ 次元の列ベクトルとする。\n",
+    "\n",
+    "**< CBoW >**  \n",
+    "入力単語のリストを $\\mathcal{H}$ とする。   \n",
+    "$\\mathcal{H}$ が与えられた時に $j$ 番目の出力単語 $\\mathbf{y}_{j}$ が出力される確率を以下の式で定義する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P(\\mathbf{y}_{i}|\\mathcal{H}) &= \\frac{\\exp(\\phi (\\mathcal{H},\\mathbf{y}_{j}))}{\\sum_{\\mathbf{y}_{j^{\\prime}} \\in \\mathcal{V}} \\exp (\\phi (\\mathcal{H}, \\mathbf{y}_{j^{\\prime}}))} \\\\\n",
+    "\\phi(\\mathcal{H},\\mathbf{y}_{j}) &= \\sum_{i:\\mathbf{x}_{i}\\in\\mathcal{H}}(\\mathbf{Ex}_{i}) \\cdot ( \\mathbf{Oy}_{j}) \\\\\n",
+    "&= \\sum_{i:\\mathbf{x}_{i}\\in\\mathcal{H}} \\mathbf{e}_{i} \\cdot \\mathbf{o}_{j}\n",
+    "\\end{align*}\n",
+    "\n",
+    "**< skip-gram >**  \n",
+    "入力語彙 $\\mathcal{V}$ 中の $i$ 番目の単語 $\\mathbf{x}_{i}$ が与えられた時に  \n",
+    "出力語彙 $\\mathcal{V}$ 中の $j$ 番目の単語 $\\mathbf{y}_{j}$ が出力される確率を以下の式で定義する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P(\\mathbf{y}_{i}|\\mathcal{H}) &= \\frac{\\exp(\\phi (\\mathcal{x}_{i},\\mathbf{y}_{j}))}{\\sum_{\\mathbf{y}_{j^{\\prime}} \\in \\mathcal{V}} \\exp (\\phi (\\mathcal{x}_{i}, \\mathbf{y}_{j^{\\prime}}))} \\\\\n",
+    "\\phi(\\mathcal{x}_{i},\\mathbf{y}_{j}) &= (\\mathbf{Ex}_{i}) \\cdot ( \\mathbf{Oy}_{j}) \\\\\n",
+    "&= \\mathbf{e}_{i} \\cdot \\mathbf{o}_{j}\n",
+    "\\end{align*}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "上の式から、skip-gramは $\\mathcal{H} = \\{ \\mathbf{x}_{i} \\}$ であるとき（入力単語リスト長が常に１）のCBoWと見なせることが分かる。  \n",
+    "また、対数双線形モデルにてCBoWやskip-gramを統一的に記述できることが分かっている。  \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
