--- a/NLP_by_Deep_Learning/NLP_by_DL_3.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_3.ipynb
@@ -329,7 +329,65 @@
    "source": [
     "上の式から、skip-gramは $\\mathcal{H} = \\{ \\mathbf{x}_{i} \\}$ であるとき（入力単語リスト長が常に１）のCBoWと見なせることが分かる。  \n",
     "また、対数双線形モデルにてCBoWやskip-gramを統一的に記述できることが分かっている。  \n",
-    "\n"
+    "\n",
+    "対数双線形モデルの式はFFNNの出力層と同じ形のため、  \n",
+    "これを１層NNによるニューラル言語モデルとみなして実装することができる。\n",
+    "\n",
+    "訓練データを $\\mathcal{D} = \\{ (\\mathcal{H}^{(n)}, \\mathbf{y}_{j}^{(n)})\\}_{n=1}^{N}$ とするとき、学習時の目的関数は次の通り。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "L(\\mathbf{E}, \\mathbf{O}|\\mathcal{D}) &= - \\sum_{(\\mathcal{H},\\mathbf{y}_{j})\\in\\mathcal{D}} \\log (P(\\mathbf{y}_{j}|\\mathcal{H})) \\\\\n",
+    "&= - \\sum_{(\\mathcal{H},\\mathbf{y}_{j})\\in\\mathcal{D}} \\phi (\\mathcal{H},\\mathbf{y}_{j}) + \\sum_{(\\mathcal{H},\\mathbf{y}_{j})\\in\\mathcal{D}} \\log \\, \\left( \\sum_{\\mathbf{y}_{j^{\\prime}}\\in\\mathcal{V}} \\exp(\\phi (\\mathcal{H},\\mathbf{y}_{j^{\\prime}})) \\right)\n",
+    "\\end{align*}\n",
+    "\n",
+    "この数式は語彙 $\\mathcal{V}$ 全てに基づいて計算されることから負荷が高く、  \n",
+    "階層的ソフトマックス等を用いた対処が行われる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 負例サンプリングによる獲得方法\n",
+    "負例サンプリングによる学習は、与えられた入出力の組が  \n",
+    "実データの確率分布から取得されたデータか、別の確率分布から生成されたデータかの  \n",
+    "２クラスを判別する識別モデルの学習に相当する。\n",
+    "\n",
+    "$P((\\mathcal{H},\\mathbf{y}_{j}) \\sim P^{\\mathcal{D}})$ を、学習用の１つのデータ $(\\mathcal{H},\\mathbf{y}_{j})$ が  \n",
+    "実際の訓練データ $\\mathcal{D}$ を生成する確率分布 $P^{\\mathcal{D}}$ から生成された場合を表す確率モデルとし、  \n",
+    "以下のようにモデル化する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P((\\mathcal{H},\\mathbf{y}_{j}) \\sim P^{\\mathcal{D}}) = \\frac{1}{1+\\exp(-\\phi (\\mathcal{H},\\mathbf{y}_{j}))}\n",
+    "\\end{align*}\n",
+    "\n",
+    "同様に、 $P((\\mathcal{H},\\mathbf{y}_{j}) \\sim P^{\\mathcal{D}^{\\prime}})$ を $(\\mathcal{H},\\mathbf{y}_{j})$ が  \n",
+    "ノイズデータ $\\mathcal{D}^{\\prime}$ を生成する確率分布 $P^{\\mathcal{D}^{\\prime}}$ から生成された場合を表す確率モデルとする。\n",
+    "\n",
+    "このとき、実データとノイズの識別問題の対数尤度関数は次の通り。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "L(\\mathbf{E}, \\mathbf{O}|\\mathcal{D}) &= - \\sum_{(\\mathcal{H},\\mathbf{y}_{j})\\in\\mathcal{D}} \\log (P((\\mathcal{H},\\mathbf{y}_{j}) \\sim P^{\\mathcal{D}})\n",
+    "+ \\sum_{(\\mathcal{H},\\mathbf{y}_{j})\\in\\mathcal{D}^{\\prime}} \\log (P((\\mathcal{H},\\mathbf{y}_{j}) \\sim P^{\\mathcal{D}^{\\prime}})\n",
+    "\\end{align*}\n",
+    "\n",
+    "これら２式より\n",
+    "\n",
+    "\\begin{align*}\n",
+    "L(\\mathbf{E}, \\mathbf{O}|\\mathcal{D}) &= \\sum_{(\\mathcal{H},\\mathbf{y}_{j})\\in\\mathcal{D}} \\log (1+\\exp(-\\phi (\\mathcal{H},\\mathbf{y}_{j})))\n",
+    "- \\sum_{(\\mathcal{H},\\mathbf{y}_{j})\\in\\mathcal{D}^{\\prime}} \\log (1+\\exp(-\\phi (\\mathcal{H},\\mathbf{y}_{j})))\n",
+    "\\end{align*}\n",
+    "\n",
+    "となる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 3.4　系列変換モデル"
    ]
   }
  ],
