--- a/NLP_by_Deep_Learning/NLP_by_DL_3.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_3.ipynb
@@ -387,8 +387,80 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### 3.4　系列変換モデル"
+    "### 3.4　系列変換モデル (seq2seq model)\n",
+    "自然言語処理において文から分への変換と見なせるタスクとして、機械翻訳、対話、質問応答などがある。  \n",
+    "これらのタスクは系列（sequence）から系列への変換とみなすことができる。\n",
+    "\n",
+    "ここで、系列を別の系列へ変換する確率をモデル化したものを  \n",
+    "**系列変換モデル**（sequene-to-sequence model）と呼ぶ。\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "入力系列を $\\mathbf{X}$、出力系列を $\\mathbf{Y}$ で表す。  \n",
+    "入力系列中の $i$ 番目の要素を $\\mathbf{x}_{i}$、出力系列中の $j$ 番目の要素を $\\mathbf{y}_{j}$ とし、  \n",
+    "それぞれ one-hot ベクトルであり、対応する離散オブジェクトを変換したものとする。\n",
+    "\n",
+    "入力側の語彙を $\\mathcal{V}^{(s)}$、出力側の語彙を $\\mathcal{V}^{(t)}$ とすると、全ての $i,j$ に対して $\\mathbf{x}_{i} \\in \\mathbb{R}^{|\\mathcal{V}^{(s)}|}, \\mathbf{y}_{j} \\in \\mathbb{R}^{|\\mathcal{V}^{(t)}|}$ である。  \n",
+    "また、入力分長を $I$、出力文長を $J$ とする。\n",
+    "\n",
+    "このとき\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{X} = (\\mathbf{x}_{1}, \\ldots, \\mathbf{x}_{i}, \\ldots, \\mathbf{x}_{I}) = (\\mathbf{x}_{i})_{i=1}^{I} \\\\\n",
+    "\\mathbf{Y} = (\\mathbf{y}_{1}, \\ldots, \\mathbf{y}_{j}, \\ldots, \\mathbf{y}_{J}) = (\\mathbf{y}_{j})_{j=1}^{J}\n",
+    "\\end{align*}\n",
+    "\n",
+    "ここで $\\mathbf{y}_{0} = \\mathbf{y}^{(BOS)}$ はBOSに対応する one-hot ベクトル、  \n",
+    "$\\mathbf{y}_{J+1} = \\mathbf{y}^{(EOS)}$ はEOSに対応する one-hot ベクトルであり、  \n",
+    "出力側の語彙 $\\mathcal{V}^{(t)}$ にはBOS, EOSが含まれていることを仮定する。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ある入力系列 $\\mathbf{X}$ が与えられた時に、ある出力系列 $\\mathbf{Y}$ へ変換する条件付き確率 $P(\\mathbf{Y}|\\mathbf{X})$ を考える。  \n",
+    "これをモデル化したものが系列変換モデルで、ここでは次のようにモデル化する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P_{\\theta}(\\mathbf{Y}|\\mathbf{X}) = \\prod_{j=1}^{J+1} P_{\\theta}(\\mathbf{y}_{j} | \\mathbf{Y}_{<j}, \\mathbf{X})\n",
+    "\\end{align*}\n",
+    "\n",
+    "入力 $\\mathbf{X}$ を受け取って（固定長の）符号ベクトル $\\mathbf{z}$ を生成する処理を次のように表す。  \n",
+    "関数 $\\Lambda$ にはRNNを使用することが一般的である。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{z} = \\Lambda (\\mathbf{X})\n",
+    "\\end{align*}\n",
+    "\n",
+    "符号ベクトル $\\mathbf{z}$ を受け取って出力 $\\mathbf{Y}$ を生成する処理は再帰ニューラル言語モデルと同じで、  \n",
+    "隠れ状態ベクトルを生成する関数を $\\Psi$、  \n",
+    "単語の生成確率を返す関数を $\\Upsilon$ として次のように表す。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P_{\\theta}(\\mathbf{y}_{j}|\\mathbf{Y}_{<j}, \\mathbf{X}) &= \\Psi(\\mathbf{h}_{j}^{(t)}, \\mathbf{y}_{j}) \\\\\n",
+    "\\mathbf{h}_{j}^{(t)} &= \\Upsilon ( \\mathbf{h}_{j-1}^{(t)}, \\mathbf{y}_{j-1})\n",
+    "\\end{align*}\n",
+    "\n",
+    "ただし $j=1$ のとき\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{h}_{j-1}^{(t)} &= \\mathbf{h}_{0}^{(t)} = \\mathbf{z} \\\\\n",
+    "\\mathbf{y}_{j-1} &= \\mathbf{y}_{0} = \\mathbf{y}^{(BOS)}\n",
+    "\\end{align*}\n",
+    "\n",
+    "である。\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
