--- a/NLP_by_Deep_Learning/NLP_by_DL_3.ipynb
+++ b/NLP_by_Deep_Learning/NLP_by_DL_3.ipynb
@@ -460,7 +460,206 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "$j=1$ の場合（初期値の設定）を除き、系列変換モデルと再帰ニューラル言語モデルの処理は等しい。  \n",
+    "ゆえに系列変換モデルを条件付き（再帰ニューラル）言語モデルとして認識することができる。  \n",
+    "この視点では、系列変換モデルは次のような条件付き確率のモデル化である。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P_{\\theta}(\\mathbf{Y}|\\mathbf{X}) &= \\prod_{j=1}^{J+1} P_{\\theta} (\\mathbf{y}_{j}|\\mathbf{Y}_{<j},\\mathbf{X}) \\\\\n",
+    "P_{\\theta} (\\mathbf{y}_{j} | \\mathbf{Y}_{<j},\\mathbf{X}) &= \\Upsilon (\\mathbf{h}_{j}^{(t)}, \\mathbf{y}_{j}) \\\\\n",
+    "\\mathbf{h}_{j}^{(t)} &= \\left\\{ \n",
+    "\\begin{array}\n",
+    " \\,\\Psi (\\mathbf{z},\\mathbf{y}^{(BOS)}) & \\text{if} \\, j=1 \\\\\n",
+    " \\,\\Psi (\\mathbf{h}_{j-1}^{(t)},\\mathbf{y}_{j-1}) & \\text{otherwise}\n",
+    "\\end{array} \\right.\\\\\n",
+    "\\mathbf{z} &= \\Lambda (\\mathbf{X})\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "再帰ニューラル言語モデルを同形式で表すと次の通り。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P_{\\theta}(\\mathbf{Y}) &= \\prod_{j=1}^{J+1} P_{\\theta^{\\prime}} (\\mathbf{y}_{j}|\\mathbf{Y}_{<j}) \\\\\n",
+    "P_{\\theta^{\\prime}} (\\mathbf{y}_{j} | \\mathbf{Y}_{<j}) &= \\Upsilon (\\mathbf{h}_{j}^{(t)}, \\mathbf{y}_{j}) \\\\\n",
+    "\\mathbf{h}_{j}^{(t)} &= \\left\\{ \n",
+    "\\begin{array}\n",
+    " \\,\\Psi (0,\\mathbf{y}^{(BOS)}) & \\text{if} \\, j=1 \\\\\n",
+    " \\,\\Psi (\\mathbf{h}_{j-1}^{(t)},\\mathbf{y}_{j-1}) & \\text{otherwise}\n",
+    "\\end{array} \\right.\\\\\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 系列変換モデルの構造\n",
+    "\n",
+    "１．符号化器埋め込み層（encoder embedding layer）  \n",
+    "２．符号化器再帰層（encoder recurrent layer）  \n",
+    "３．復号化器埋め込み層（decoder embedding layer）  \n",
+    "４．復号化器再帰層（decoder recurrent layer）  \n",
+    "５．復号化器出力層（decoder output layer）\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### (1)符号化器埋め込み層\n",
+    "入力：入力文中の $i$ 番目の単語を意味する one-hotベクトル $\\mathbf{x}_{i}$  \n",
+    "出力：入力文中の $i$ 番目の単語に対応する埋め込みベクトル $\\bar{\\mathbf{x}}_{i}$  \n",
+    "　について、$i=1 \\sim I$ まで順に（あるいは一括で）処理する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\bar{\\mathbf{x}}_{i} = \\mathbf{E}^{(s)}\\mathbf{x}_{i} \\hspace{20px} \\forall i\n",
+    "\\end{align*}\n",
+    "\n",
+    "ここで $\\mathbf{E}^{(s)} \\in \\mathbb{R}^{\\mathcal{D} \\times |\\mathcal{V}^{(s)}| }$ は入力語彙に対する埋め込み行列に相当する。  \n",
+    "埋め込みベクトル獲得処理は $i$ に依存しないため一括して処理が可能である。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\bar{\\mathbf{X}} = \\mathbf{E}^{(s)}\\mathbf{X}\n",
+    "\\end{align*}\n",
+    "\n",
+    "このとき\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\bar{\\mathbf{X}} = (\\bar{\\mathbf{x}}_{1}, \\ldots, \\bar{\\mathbf{x}}_{I}) = (\\bar{\\mathbf{x}}_{i})_{i=1}^{I}\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### (2)符号化器再帰層\n",
+    "入力：入力文中の $i$ 番目の単語に対応する埋め込みベクトル $\\bar{\\mathbf{x}}_{i}$  \n",
+    "出力：隠れ状態ベクトル $\\mathbf{h}_{i}^{(s)}$\n",
+    "\n",
+    "説明のため、この処理を１層単方向RNN、活性化関数tanhでモデル化したとする。  \n",
+    "$\\Psi^{(s)}(\\cdot)$ を再帰ニューラルネットの処理を表す関数とし、出力される位置 $i$ の隠れ状態ベクトルを $\\mathbf{h}_{i}^{(s)}$ で表す。  \n",
+    "このとき符号化器再帰層での処理は次の式に相当する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{h}_{i}^{(s)} &= \\Psi^{(s)} ( \\bar{\\mathbf{x}}_{i}, \\mathbf{h}_{i-1}^{(s)} ) \\\\\n",
+    "\\Psi^{(s)} ( \\bar{\\mathbf{x}}_{i}, \\mathbf{h}_{i-1}^{(s)} ) &= \\operatorname{tanh} \\left(\n",
+    "\\mathbf{W}^{(s)} \\left[ \\begin{array} \\mathbf{h}_{i-1}^{(s)} \\\\ \\bar{\\mathbf{x}}_{i} \\end{array}\n",
+    "\\right] + \\mathbf{b}^{(s)} \\right)\n",
+    "\\end{align*}\n",
+    "\n",
+    "ただし $\\mathbf{W}^{(s)} \\in \\mathbb{R}^{H \\times (H+D)}, \\mathbf{b}^{(s)} \\in \\mathbb{R}^{H}$ であり、  \n",
+    "$i=0$ のとき $\\mathbf{h}_{i}^{(s)} = \\mathbf{h}_{0}^{(s)} = \\mathbf{0}$ となる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### (3)復号化器埋め込み層\n",
+    "復号化器では位置 $j$ の処理に位置 $j-1$ の処理結果を利用することから、通常は $j$ について一括処理できない。  \n",
+    "ただし学習時には $\\mathbf{Y}$ が訓練データとして事前に与えられるため一括処理として実装できる。\n",
+    "\n",
+    "入力：復号化器出力層で選択された出力 $\\mathbf{y}_{j-1}$  \n",
+    "出力：埋め込みベクトル $\\bar{\\mathbf{y}}_{j}$  \n",
+    "　について、位置 $j$ で以下の計算を行う。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\bar{\\mathbf{y}}_{j} = \\mathbf{E}^{(t)} \\mathbf{y}_{j-1}\n",
+    "\\end{align*}\n",
+    "\n",
+    "ここで $\\mathbf{E}^{(t)} \\in \\mathbb{R}^{\\mathcal{D} \\times |\\mathcal{V}^{(t)}| }$ は復号化器埋め込み層の埋め込み行列である。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### (4)復号化器再帰層\n",
+    "入力：復号化器埋め込み層の出力に対応する埋め込みベクトル $\\bar{\\mathbf{y}}_{j}$  \n",
+    "出力：隠れ状態ベクトル $\\mathbf{h}_{j}^{(t)}$  \n",
+    "\n",
+    "関数 $\\Psi^{(t)}(\\cdot)$ を復号化器再帰層で行う処理を表す関数とするとき、  \n",
+    "各位置 $j$ での処理は次のようになる。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{h}_{j}^{(t)} &= \\Psi^{(t)} (\\bar{\\mathbf{y}}_{j}, \\mathbf{h}_{j-1}^{(t)} ) \\\\\n",
+    "\\Psi^{(t)}(\\bar{\\mathbf{y}}_{j},\\mathbf{h}_{j-1}^{(t)}) &= \\operatorname{tanh} \\left( \\mathbf{W}^{(t)} \\left[ \\begin{array}\\mathbf{h}_{j-1}^{(t)} \\\\ \\bar{\\mathbf{y}}_{j} \\end{array} \\right] + \\mathbf{b}^{(t)}\\right)\n",
+    "\\end{align*}\n",
+    "\n",
+    "ただし $\\mathbf{W}^{(t)} \\in \\mathbb{R}^{H \\times (H+D)}, \\mathbf{b}^{(t)} \\in \\mathbb{R}^{H}$ である。\n",
+    "\n",
+    "また、符号化器再帰層の最後の位置の隠れ状態ベクトル $\\mathbf{h}_{I}^{(s)}$ を  \n",
+    "復号化器再帰層の初期状態 $j=0$ における $\\mathbf{h}_{0}^{(t)}$ として用いる。  \n",
+    "すなわち\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{h}_{0}^{(t)} = \\mathbf{h}_{I}^{(s)}\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### (5)復号化器出力層\n",
+    "入力：位置 $j$ での復号化器再帰層の隠れ状態ベクトル $\\mathbf{h}_{j}^{(t)}$  \n",
+    "出力：$\\mathbf{y}_{j}$ が生成される確率 $p_{j}$\n",
+    "\n",
+    "出力層の計算は学習時と出力系列の予測時で処理が若干異なる。\n",
+    "\n",
+    "共通処理として、スコアベクトル $\\mathbf{o}_{j}$ を次のとおり計算する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\mathbf{o}_{j} = \\mathbf{W}^{(o)}\\mathbf{h}_{j}^{(t)} + \\mathbf{b}^{(o)}\n",
+    "\\end{align*}\n",
+    "\n",
+    "ここで $\\mathbf{W}^{(o)} \\in \\mathbb{R}^{|\\mathcal{V}^{(t)}| \\times H}$ と $\\mathbf{b}^{(o)} \\in \\mathbb{R}^{|\\mathcal{V}^{(t)}|}$ は、出力層内の変換行列とバイアス項のベクトルである。\n",
+    "\n",
+    "【学習時】  \n",
+    "次に、学習時の場合は、訓練データとモデルの適合の度合いをみるため確率計算処理を行う。  \n",
+    "$j$ 番目の単語 $\\mathbf{y}_{j}$ の生成確率を次の式で計算する。\n",
+    "\n",
+    "\\begin{align*}\n",
+    "P_{\\theta}(\\mathbf{y}_{j} | \\mathbf{Y}_{<j}) = \\operatorname{softmax}(\\mathbf{o}_{j}) \\cdot \\mathbf{y}_{j}\n",
+    "\\end{align*}\n",
+    "\n",
+    "ソフトマックス関数によりスコアのベクトル表現が各出力語彙の確率に変換されるので、  \n",
+    "one-hot ベクトル $\\mathbf{y}_{j}$ との内積を取ることで $j$ 番目の単語の生成確率を得ることができる。\n",
+    "\n",
+    "【予測時】  \n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\hat{\\mathbf{y}}_{j} = \\operatorname{softmax}_{a}(\\mathbf{o}_{j})\n",
+    "\\end{align*}\n",
+    "\n",
+    "により、パラメータ $a$ を十分大きい値としたとき、  \n",
+    "ベクトル $\\mathbf{o}_{j}$ の中で最大の要素が１でそれ以外が０であるような one-hot ベクトルの近似が得られるので、  \n",
+    "これを単語を選択する処理として用いることができる。\n",
+    "\n",
+    "$\\mathbf{y}_{j}$ は one-hot ベクトルとなるので、  \n",
+    "これを次の処理位置の入力として復号化器埋め込み層の処理に戻る。  \n",
+    "このような３種からなるループ処理を、終了信号を受け取るまで繰り返し行う。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 系列変換モデルのパラメータ数\n"
+   ]
   }
  ],
  "metadata": {
